@@ -132,5 +132,6 @@ Release 1.6
 * Bug Fixing 2283538 [ERDesignerNG] Relation does not take care of attribute order
 * Bug Fixing 2283527 [ERDesignerNG] Line separators sometimes wrong
 * Bug Fixing 2284610 [ERDesignerNG] domains cannot be saved
+* Bug Fixing 2215889 [ERDesignerNG] Exception when using MySQL BIT Type
 * Applied patch 2124875 [ERDesignerNG] Add Postgres data types
 
